<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.holamundo.Principal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:gravity="center_horizontal"
                tools:text="@string/titulo" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtNombre"
                android:hint="@string/Nombre" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/Txtapellido"
                android:hint="@string/Apellido" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cmdGenero" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:text="@string/Soltero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/r1"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/Soltero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/r2"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/Divorciado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/r3"
                    android:layout_weight="1" />
            </RadioGroup>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></LinearLayout>

            <Button
                android:text="@string/Saludar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cmdBoton"
                android:onClick="saludar " />

            <Button
                android:text="@string/Borrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
